# telegram_bot_prj

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
keyboards/: common_keyboards.py
keyboards/inline_keyboards/: actions_kb.py  info_kb.py  shop_kb.py
routers/: __init__.py  admin_handlers.py  common.py  media_handlers.py
routers/callback_handlers/: __init__.py  action_kb_callback_handlers.py  info_kb_callback_handlers.py  shop_kb_callback_handlers.py
routers/commands/: __init__.py  base_commands.py  user_commands.py
routers/survey/: __init__.py  handlers.py  states.py
routers/survey/survey_handlers/: email_newsletter_handlers.py  select_sport_handlers.py  user_email_handlers.py
validators/: email_validator.py
