[project]
name = "telegram-bot-prj"
version = "0.1.0"
description = ""
authors = [
    {name = "Egor_Yakovlev1",email = "egor.yakovlev.95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram (>=3.18.0,<4.0.0)",
    "email-validator (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

